<resources>
    <string name="app_name">Dailykit Mobile</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_menu">Menu</string>
    <string name="title_scan">Scan</string>
    <string name="title_order">Order</string>
    <string name="title_label">Label</string>
    <string name="scan_now">Scan Now</string>
    <string name="order_id">Order ID</string>
    <string name="ingredient">Ingredient</string>
    <string name="weight">Weight</string>
    <string name="options">Options</string>
    <string name="processing">Processing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="partial_packing">Partial Packing</string>
    <string name="scan_help_text">Use Volume Rocker to Enable/Disable Flash</string>
    <string name="pause_scan">Pause Scan</string>
    <string name="resume_scan">Resume Scan</string>
    <string name="rapid_scanning">Rapid Scanning</string>
    <string name="back">Back</string>
    <string name="scanned_successfully">Scanned Successfully</string>
    <string name="scanning_in_progress">Scanning In-Progress</string>
    <string name="realm">Realm Name</string>
    <string name="client_id">Client ID</string>
    <string name="continue_">Continue</string>
    <string name="please_wait">Please Wait</string>
    <string name="mealkit_product">Mealkit Product</string>
    <string name="ready_to_eat_product">Ready to Eat Product</string>
    <string name="inventory_product">Inventory Product</string>
    <string name="dummy_name">dummy_name</string>
    <string name="zero">0</string>
    <string name="dollar">$</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="ordered_on">Ordered On</string>
    <string name="ready_by">Ready By</string>
    <string name="pick_up">Pick Up</string>
    <string name="camera_setting_alert">Please Allow Camera Permissions from Settings</string>
    <string name="repack">Repack</string>
    <string name="reassemble">Reassemble</string>
</resources>
