<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.IngredientFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_left"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="5">
            <org.dailykit.CustomView.FuturaBoldTextView
                android:id="@+id/order_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:layout_weight="3"
                android:text="@string/order_id"
                android:layout_marginLeft="5dp"
                android:textStyle="bold"
                android:layout_gravity="center|left"
                android:gravity="center|left"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/ic_order_time" />

                <org.dailykit.CustomView.FuturaBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="40 mins"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/extreme_black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_ingredient_tab"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_transparent_button"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:weightSum="6">

                <org.dailykit.CustomView.FuturaMediumTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:alpha="0.4"
                    android:text="@string/ingredient"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <org.dailykit.CustomView.FuturaMediumTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:alpha="0.4"
                    android:text="@string/processing"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <org.dailykit.CustomView.FuturaMediumTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.4"
                    android:paddingLeft="5dp"
                    android:text="@string/weight"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <org.dailykit.CustomView.FuturaMediumTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:alpha="0.4"
                    android:paddingLeft="10dp"
                    android:text="@string/options"
                    android:textColor="@color/white"
                    android:textSize="10sp" />


            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredient_detail_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="false"
                android:focusable="true"
                android:scrollbars="none">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>