<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="1dp"
    android:layout_marginBottom="1dp"
    android:background="@color/list_yellow"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="11">
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:text="@string/dummy_name"
            android:gravity="start|center"
            android:fontFamily="@font/poppins"
            android:textColor="@color/text"
            android:maxLines="1"
            android:paddingStart="5dp"
            android:textSize="14sp"
            android:layout_height="match_parent"
            android:layout_weight="4" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:layout_weight="4">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/ic_person_grey" />
            <TextView
                android:id="@+id/serving"
                android:layout_width="wrap_content"
                android:text="@string/zero"
                android:gravity="start|center"
                android:fontFamily="@font/poppins"
                android:textColor="@color/text"
                android:maxLines="1"
                android:layout_marginStart="2dp"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:layout_height="match_parent" />
        </LinearLayout>
        <TextView
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:text="@string/dummy_name"
            android:gravity="end|center"
            android:fontFamily="@font/poppins"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:visibility="gone"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <TextView
            android:id="@+id/status"
            android:layout_width="0dp"
            android:text="0/0/1"
            android:gravity="end|center"
            android:fontFamily="@font/poppins"
            android:textColor="@color/text"
            android:textSize="14sp"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageView
                android:id="@+id/toggle"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="5dp"
                app:srcCompat="@drawable/ic_arrow_down_grey" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/mark_as_assembled"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button_light_blue">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mark as Assembled"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/repack"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button_light_blue">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/repack"
                android:textColor="@color/white" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/reassemble"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button_light_blue">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reassemble"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>