<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:weightSum="7">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_order_number" />

                <TextView
                    android:id="@+id/order_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="26"
                    android:fontFamily="@font/poppins_semi"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:text="@string/zero"
                    android:fontFamily="@font/poppins_semi"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginEnd="5dp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/text"
                android:alpha="0.8"
                android:fontFamily="@font/poppins"
                android:textSize="13sp" />
            <TextView
                android:id="@+id/customer_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/text"
                android:alpha="0.8"
                android:fontFamily="@font/poppins"
                android:textSize="13sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/inventory_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/inventory_product"
                android:layout_marginTop="5dp"
                android:textColor="@color/text"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inventory_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ready_to_eat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/ready_to_eat_product"
                android:layout_marginTop="5dp"
                android:textColor="@color/text"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ready_to_eat_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/meal_kit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:text="@string/mealkit_product"
                android:layout_marginTop="5dp"
                android:textColor="@color/text"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/meal_kit_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp" />
    </LinearLayout>


</androidx.cardview.widget.CardView>